correction crate anim couleurs